# pypi_observer_bot

./: .gitignore  README.md  pyproject.toml
pypi_observer/: informer.py  listner.py
